# flask_movie_database

./: .flake8  .gitignore  Makefile  README.md  main.py  pyproject.toml
flaskr/: __init__.py  auth.py  catalog.py  db.py  schema.sql
flaskr/templates/catalog/: create.html  index.html  update.html
tests/: data.sql  test_auth.py  test_movies_catalog.py
